# gsd-pi

./: .gitattributes  .gitignore  .secretscanignore  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsc
docker/: Dockerfile.sandbox
docs/: README.md  db-map.md  prompt-db-combined-map.md  prompt-map.md
gitbook/: README.md
gsd-orchestrator/: SKILL.md
integrations/hermes/: .gitignore  CONTEXT.md  README.md  __init__.py  plugin.yaml  pyproject.toml
integrations/hermes/docs/: issue-1162-grilling.md  setup.md
integrations/hermes/open_gsd_hermes/: __init__.py  binding.py  commands.py  config.py  cron.py  formatting.py  gsd_client.py  inject.py  memory.py  notifications.py  snapshot.py  supervisor.py  types.py
integrations/hermes/scripts/: preflight.sh
integrations/hermes/tests/: test_binding.py  test_config.py  test_cron.py  test_directory_loader.py  test_gsd_client_cache.py  test_gsd_client_execute.py  test_gsd_client_process_cwd.py  test_gsd_client_timeout.py  test_memory.py  test_milestone_client.py  test_new_milestone_command.py  test_read_cli_contract.py  test_snapshot.py  test_supervisor_fsm.py
integrations/hermes/tests/fixtures/minimal-project/.gsd/: STATE.md
integrations/hermes/tests/golden/: memory_prefetch.txt  snapshot.txt
mintlify-docs/: getting-started.mdx
native/: Cargo.toml  README.md
pkg/: package.json
plans/: 036-stabilize-prompt-cache-prefix.md  037-dedupe-per-turn-context-messages.md  038-cheapen-compaction-calls.md  039-close-prompt-budget-gaps.md  (+3 more)
(+1874 files in other folders)
